--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FakeTube</title>
+    <!-- Daisy UI link -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
+
 <body>
-    
+    <header>
+        <nav class="w-11/12 mx-auto flex justify-between border-b-2 border-[#17171733] py-5">
+            <div class="logo">
+                <img class="w-[120px]" src="/assets/Logo.png" alt="" srcset="">
+            </div>
+            <div class="sort">
+                <button id="" class="btn">Sort by View</button>
+            </div>
+            <div class="blogs">
+                <button class="btn bg-[#FF1F3D] text-white rounded">Blogs</button>
+            </div>
+        </nav>
+    </header>
+    <!-- dynamic button nav section -->
+     <nav id="" class="">
+
+        
+     </nav>
 </body>
+
 </html>
