dynamic buttons are added using API link

--- a/index.html
+++ b/index.html
@@ -25,10 +25,17 @@
         </nav>
     </header>
     <!-- dynamic button nav section -->
-     <nav id="" class="">
+    <nav id="category-container" class="flex py-5 justify-center gap-5 ">
+        <div class="">
+            <button class="btn btn-sm bg-[#FF1F3D] text-white">All</button>
+        </div>
 
-        
-     </nav>
+
+
+    </nav>
+
+    <!-- Javascript linkup -->
+    <script src="/Script/index.js"></script>
 </body>
 
 </html>
